--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 	    <artifactId>commons-io</artifactId>
 	    <version>2.11.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>com.relevantcodes</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>2.41.2</version>
+	</dependency>
 </dependencies>
 	
 
